# restaurant-review-chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  database.py  main.py  pyproject.toml  requirements.txt  vector.py
evals/: test_chatbot.py
evals/events/: mozzarella.json  negative_review.json  pizza_quality.json
