[project]
name = "local-restaurant-review-chatbot-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "ipykernel>=7.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.3.3",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]
